force-app/main/default/objects/Environment__c/Environment__c.object-meta.xml
<CustomObject>
    <label>Environment</label>
    <pluralLabel>Environments</pluralLabel>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Registered Salesforce orgs managed by SFOps for deployment, monitoring, and governance.</description>
</CustomObject>