force-app/main/default/objects/Environment__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <type>EncryptedText</type>
    <length>255</length>
    <maskType>all</maskType>
    <maskChar>asterisk</maskChar>
    <description>Encrypted OAuth access token for the connected org.</description>
</CustomField>