force-app/main/default/objects/Environment__c/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <label>API Version</label>
    <type>Text</type>
    <length>10</length>
    <description>Salesforce API version used for this environment.</description>
</CustomField>