force-app/main/default/objects/Environment__c/fields/Auth_Status__c.field-meta.xml
<CustomField>
    <fullName>Auth_Status__c</fullName>
    <label>Auth Status</label>
    <type>Picklist</type>
    <description>Current authentication status of the connected org.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Connected</fullName><default>false</default><label>Connected</label></value>
            <value><fullName>Disconnected</fullName><default>false</default><label>Disconnected</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>