force-app/main/default/objects/Environment__c/fields/Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Instance_URL__c</fullName>
    <label>Instance URL</label>
    <type>Url</type>
    <description>The instance URL of the connected Salesforce org.</description>
</CustomField>