force-app/main/default/objects/Environment__c/fields/Is_Production__c.field-meta.xml
<CustomField>
    <fullName>Is_Production__c</fullName>
    <label>Is Production</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is a production environment.</description>
</CustomField>