force-app/main/default/objects/Environment__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <label>Last Sync Date</label>
    <type>DateTime</type>
    <description>Date and time of the last metadata sync from this environment.</description>
</CustomField>