force-app/main/default/objects/Environment__c/fields/Metadata_Count__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Count__c</fullName>
    <label>Metadata Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Total number of metadata components in this environment.</description>
</CustomField>