force-app/main/default/objects/Environment__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <label>Org Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>The 18-character Salesforce Org ID.</description>
</CustomField>