force-app/main/default/objects/Environment__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <type>EncryptedText</type>
    <length>255</length>
    <maskType>all</maskType>
    <maskChar>asterisk</maskChar>
    <description>Encrypted OAuth refresh token for the connected org.</description>
</CustomField>