force-app/main/default/objects/Environment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <required>true</required>
    <description>The type of Salesforce environment.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Production</fullName><default>false</default><label>Production</label></value>
            <value><fullName>Developer</fullName><default>false</default><label>Developer</label></value>
            <value><fullName>QA</fullName><default>false</default><label>QA</label></value>
            <value><fullName>Staging</fullName><default>false</default><label>Staging</label></value>
            <value><fullName>Integration</fullName><default>false</default><label>Integration</label></value>
            <value><fullName>Scratch</fullName><default>false</default><label>Scratch</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>